# StewartPlatform

./: CMakeLists.txt  package.xml  readme.md
include/StewartPlatform/: color_segmentation.h
launch/: stewart_color.launch
rviz/: stewart.rviz
scenes/: ros_stewartPlatform.ttt
script/: EKF1D.py  EKF1DPOINTCL.py  EKF3D.py  EKFOMEGA.py  EKFOMEGAT.py  EKFbase.py  StewartPlatform.py  StewartPlatformSim.py  ekfspecific.py  main.py  stewart_platform_ekf.py  stewart_platform_ekf_2.py  test_reduced_x.py
src/: color_segmentation.cpp  coppelia_combiner.cpp
urdf/: stewart_platform.urdf  stewart_platform_downArm1Sphere_vis_1.dae  stewart_platform_downArm1Target_vis_1.dae  stewart_platform_downArm1Tip_vis_1.dae  stewart_platform_downArm2Sphere_vis_1.dae  stewart_platform_downArm2Target_vis_1.dae  stewart_platform_downArm2Tip_vis_1.dae  stewart_platform_downArm3Sphere_vis_1.dae  stewart_platform_downArm3Target_vis_1.dae  stewart_platform_downArm3Tip_vis_1.dae  stewart_platform_downArm4Sphere_vis_1.dae  stewart_platform_downArm4Target_vis_1.dae  stewart_platform_downArm4Tip_vis_1.dae  stewart_platform_downArm5Sphere_vis_1.dae  stewart_platform_downArm5Target_vis_1.dae  stewart_platform_downArm5Tip_vis_1.dae  stewart_platform_upArmSphere1_vis_1.dae  stewart_platform_upArmSphere_2_vis_1.dae  stewart_platform_upArmSphere_vis_1.dae
